unpackaged/main/default/objects/ClientSource__c/ClientSource__c.object-meta.xml
<CustomObject>
    <label>Client Source</label>
    <nameField>
        <displayFormat>CS-{00000000}</displayFormat>
        <label>Client Source Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Sources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>