unpackaged/main/default/objects/ClientSource__c/fields/R360ID__c.field-meta.xml
<CustomField>
    <fullName>R360ID__c</fullName>
    <displayFormat>CS-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>R360 ID</label>
    <type>AutoNumber</type>
</CustomField>