unpackaged/main/default/objects/ClientSource__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Cegid</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Ecommerce</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>