unpackaged/main/default/objects/ClientSource__c/fields/SourceCode__c.field-meta.xml
<CustomField>
    <fullName>SourceCode__c</fullName>
    <description>Customer ID from providing system (CEGID, Ecom, etc;)</description>
    <label>Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>