unpackaged/main/default/objects/ClientSource__c/fields/SourceCreationDate__c.field-meta.xml
<CustomField>
    <fullName>SourceCreationDate__c</fullName>
    <label>Source Creation Date</label>
    <type>DateTime</type>
</CustomField>