unpackaged/main/default/objects/ClientSource__c/fields/UCRInternalId__c.field-meta.xml
<CustomField>
    <fullName>UCRInternalId__c</fullName>
    <externalId>true</externalId>
    <label>UCR Internal Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>