unpackaged/main/default/objects/ClientSource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>SourceCode__c</columns>
    <columns>SourceCreationDate__c</columns>
    <columns>SourceLastUpdateDate__c</columns>
    <columns>UCRCreationDate__c</columns>
    <columns>UCRInternalId__c</columns>
    <columns>UCRLastUpdateDate__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>